# pre-commit-mirrors-poetry-check

./: .pre-commit-hooks.yaml  pyproject.toml  setup.py
