[tool.poetry]
name = "pre-commit-poetry-check"
version = "0.1.0"
description = ""
authors = ["Kelton Karboviak"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.5"
poetry = "^0.12.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
